# graphical-programming-language

./: .gitignore  .gitmodules  README.md  build.py  graphical-programming-language.code-workspace
c-compiler/: CMakeLists.txt
c-compiler/cmake/: ntt-gtestConfig.cmake  ntt-jsonConfig.cmake
c-compiler/include/: compiler.h  pch.h
c-compiler/include/parser/: atomic.h  blockNode.h  error.h  function_call.h  if_statement.h  invalid.h  node.h  nodeType.h  operationNode.h  parser.h  unaryOperationNode.h  variable_definition_node.h
c-compiler/include/parser/nodegex/: branch_pattern.h  node_pattern.h  nodegex.h  sequence_pattern.h  single_node_pattern.h
c-compiler/include/tokenizer/: token.h  tokenType.h  tokenizer.h
c-compiler/include/utils/: json.h
c-compiler/src/__tests__/: test_tokenizer.cpp
c-compiler/src/parser/: atomic.cpp  blockNode.cpp  error.cpp  function_call.cpp  if_statement.cpp  invalid.cpp  node.cpp  nodeType.cpp  operationNode.cpp  unaryOperationNode.cpp  variable_definition_node.cpp
c-compiler/src/parser/__tests__/: assertions.cpp  assertions.h  test_code_block.cpp  test_compress_blocks.cpp  test_express.cpp  test_function_call.cpp  test_if_statement.cpp  test_operations.cpp  test_unary_operations.cpp  test_variable_definition.cpp
c-compiler/src/parser/nodegex/: branch_pattern.cpp  node_pattern.cpp  sequence_pattern.cpp  single_node_pattern.cpp
c-compiler/src/tokenizer/: token.cpp  tokenType.cpp  tokenizer.cpp
c-compiler/src/tokenizer/__tests__/: test_tokenizer.cpp
c-compiler/src/utils/: json.cpp
compiler/: conftest.py  parser.py  (+1 more)
(+15 files in other folders)
